Reworking testing framework